# calcit-paint

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.sh  calcit.cirru  compact.cirru
.github/workflows/: publish.yaml  publish.yaml.disabled  test.yaml  test.yaml.disabled
calcit/: calcit.cirru  compact.cirru
src/: color.rs  extracter.rs  handlers.rs  injection.rs  key_listener.rs  lib.rs  main.rs  primes.rs  renderer.rs  touches.rs
