
[workspace]
resolver = "2"

[package]
name = "calcit_paint"
version = "0.0.1"
authors = ["jiyinyiyong <jiyinyiyong@gmail.com>"]
edition = "2018"
exclude = ["resources", "!SourceCodePro-Medium.ttf"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calcit_runner = "0.4.33"
# calcit_runner = { path = "../calcit_runner.rs" }
cirru_edn = "0.1.6"
cirru_parser = "0.1.2"
notify = "4.0.16"
im = "15.0.0"
lazy_static = "1.4.0"
env_logger = "0.9"
euclid = "0.22"
log = "0.4"
pixels = "0.6.0"
winit = "0.25"
raqote = { git = "https://github.com/jrmuizel/raqote.git", rev = "74f0afa2be54561c1a9928e885ab95e8a4c5322d", default-features = false, features = ["text"] }
font-kit = { version = "0.10", optional = true }

[[bin]]
name = "calcit_paint"
path = "src/main.rs"

# need this for font-kit
[features]
default = ["text"]
text = ["font-kit"]
